{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 160,
  "lineage": "d086f524-6f74-a829-fe74-c5cff7b3d25a",
  "resources": [
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/networkSecurityGroups/nsg-subnetC",
            "location": "eastus",
            "name": "nsg-subnetC",
            "resource_group_name": "demoRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "testnsgrule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RG.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/networkSecurityGroups/nsg-subnetD",
            "location": "eastus",
            "name": "nsg-subnetD",
            "resource_group_name": "demoRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "testnsgrule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RG.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/networkSecurityGroups/nsg-subnetC/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "nsg-subnetC",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "demoRG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RG.azurerm_resource_group.main",
            "module.vnet.azurerm_network_security_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/networkSecurityGroups/nsg-subnetD/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "nsg-subnetD",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "demoRG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RG.azurerm_resource_group.main",
            "module.vnet.azurerm_network_security_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/networkSecurityGroups/nsg-subnetC/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "nsg-subnetC",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "demoRG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RG.azurerm_resource_group.main",
            "module.vnet.azurerm_network_security_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/networkSecurityGroups/nsg-subnetD/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "nsg-subnetD",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "demoRG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RG.azurerm_resource_group.main",
            "module.vnet.azurerm_network_security_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/networkSecurityGroups/nsg-subnetC/securityRules/http",
            "name": "http",
            "network_security_group_name": "nsg-subnetC",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "demoRG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RG.azurerm_resource_group.main",
            "module.vnet.azurerm_network_security_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/networkSecurityGroups/nsg-subnetD/securityRules/http",
            "name": "http",
            "network_security_group_name": "nsg-subnetD",
            "priority": 103,
            "protocol": "Tcp",
            "resource_group_name": "demoRG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.RG.azurerm_resource_group.main",
            "module.vnet.azurerm_network_security_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/virtualNetworks/demovnet/subnets/subnet-A",
            "name": "subnet-A",
            "resource_group_name": "demoRG",
            "virtual_network_name": "demovnet"
          },
          "dependencies": [
            "module.RG.azurerm_resource_group.main",
            "module.vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/virtualNetworks/demovnet/subnets/subnet-B",
            "name": "subnet-B",
            "resource_group_name": "demoRG",
            "virtual_network_name": "demovnet"
          },
          "dependencies": [
            "module.RG.azurerm_resource_group.main",
            "module.vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/24",
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/virtualNetworks/demovnet/subnets/subnet-C",
            "name": "subnet-C",
            "resource_group_name": "demoRG",
            "virtual_network_name": "demovnet"
          },
          "dependencies": [
            "module.RG.azurerm_resource_group.main",
            "module.vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.4.0/24",
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/virtualNetworks/demovnet/subnets/subnet-D",
            "name": "subnet-D",
            "resource_group_name": "demoRG",
            "virtual_network_name": "demovnet"
          },
          "dependencies": [
            "module.RG.azurerm_resource_group.main",
            "module.vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/virtualNetworks/demovnet/subnets/subnet-C",
            "network_security_group_id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/networkSecurityGroups/nsg-subnetC",
            "subnet_id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/virtualNetworks/demovnet/subnets/subnet-C"
          },
          "dependencies": [
            "module.RG.azurerm_resource_group.main",
            "module.vnet.azurerm_network_security_group.main",
            "module.vnet.azurerm_subnet.internal",
            "module.vnet.azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/virtualNetworks/demovnet/subnets/subnet-D",
            "network_security_group_id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/networkSecurityGroups/nsg-subnetD",
            "subnet_id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/virtualNetworks/demovnet/subnets/subnet-D"
          },
          "dependencies": [
            "module.RG.azurerm_resource_group.main",
            "module.vnet.azurerm_network_security_group.main",
            "module.vnet.azurerm_subnet.internal",
            "module.vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "afcc614f-f62f-46a1-9d4a-d1a2a58581cf",
            "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/virtualNetworks/demovnet",
            "location": "eastus",
            "name": "demovnet",
            "resource_group_name": "demoRG",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/virtualNetworks/demovnet/subnets/subnet-A",
                "name": "subnet-A"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/virtualNetworks/demovnet/subnets/subnet-B",
                "name": "subnet-B"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/virtualNetworks/demovnet/subnets/subnet-C",
                "name": "subnet-C",
                "security_group": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/networkSecurityGroups/nsg-subnetC"
              },
              {
                "address_prefix": "10.0.4.0/24",
                "id": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/virtualNetworks/demovnet/subnets/subnet-D",
                "name": "subnet-D",
                "security_group": "/subscriptions/98a3cdd0-9d53-4f45-84b5-f5a3b58c1f5f/resourceGroups/demoRG/providers/Microsoft.Network/networkSecurityGroups/nsg-subnetD"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.RG.azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}